--- a/.gitignore
+++ b/.gitignore
@@ -214,6 +214,12 @@ pip-log.txt
 #Mr Developer
 .mr.developer.cfg
 
+#############
+## Xcode
+#############
+
+xcuserdata
+
 *.xcuserstate
 
 *.xccheckout
