--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+##
+## openFrameworks build dir
+##
+bin/*
+!bin/data
+
 #################
 ## Eclipse
 #################
@@ -5,7 +11,6 @@
 *.pydevproject
 .project
 .metadata
-bin/
 tmp/
 *.tmp
 *.bak
@@ -47,7 +52,6 @@ local.properties
 [Rr]elease/
 x64/
 build/
-[Bb]in/
 [Oo]bj/
 
 # MSTest test Results
