--- a/bleepout.vcxproj
+++ b/bleepout.vcxproj
@@ -163,6 +163,7 @@
     <ClCompile Include="src\core\Logging.cpp" />
     <ClCompile Include="src\core\LogicController.cpp" />
     <ClCompile Include="src\core\main.cpp" />
+    <ClCompile Include="src\core\PlayerController.cpp" />
     <ClCompile Include="src\core\PlayerManager.cpp" />
     <ClCompile Include="src\core\RoundManager.cpp" />
     <ClCompile Include="src\core\SetupController.cpp" />
@@ -274,6 +275,7 @@
     <ClInclude Include="src\core\GameEvents.h" />
     <ClInclude Include="src\core\Logging.h" />
     <ClInclude Include="src\core\LogicController.h" />
+    <ClInclude Include="src\core\PlayerController.h" />
     <ClInclude Include="src\core\PlayerManager.h" />
     <ClInclude Include="src\core\RoundManager.h" />
     <ClInclude Include="src\core\SetupController.h" />
