--- a/bin/data/config/bleepoutConfig.json
+++ b/bin/data/config/bleepoutConfig.json
@@ -6,7 +6,8 @@
 		"config/Round1.json",
 		"config/Round2.json",
 		"config/Round3.json",
-		"config/Round4.json"
+		"config/Round4.json",
+		"config/Round5.json"
 	],
 	"syphonAppName" : "Arena",
 	"syphonServerName" : "Composition",
