added a new stage
using sort of meaningful names for the stages now!

--- a/bin/data/config/bleepoutConfig.json
+++ b/bin/data/config/bleepoutConfig.json
@@ -3,6 +3,7 @@
 	"logLevel" : "Notice",
 	"rounds" : 
 	[
+	  	"config/islands.json",
 		"config/Round1.json",
 		"config/Round2.json",
 		"config/Round3.json",
